[project]
name = "expense-tracker"
version = "0.1.0"
description = "Telegram bot for expense tracing"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "python-telegram-bot>=22.6",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
